--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ body {
 /* Globales */
 
 .contenedor {
-  max-width: 120rem;
-  width: 90%;
+  /* max-width: 120rem;
+  width: 90%; */
+  width: min(90%, 120rem);
   margin: 0 auto;
 }
 
@@ -43,6 +44,7 @@ h2,
 h3,
 h4 {
   font-family: var(--fuenteHeading);
+  line-height: 1.2;
 }
 
 h1 {
@@ -103,6 +105,10 @@ img {
   }
 }
 
+.barra {
+  padding-top: 3rem;
+}
+
 @media (min-width: 768px) {
   .barra {
     display: flex;
@@ -117,6 +123,7 @@ img {
 
 .logo__nombre {
   font-weight: 400;
+  margin: 0 0 2rem 0;
 }
 
 .logo__bold {
@@ -177,5 +184,116 @@ img {
 }
 
 .boton--primario {
-  background-color: var(--marron);
+  background-color: var(--marron); 
+  cursor: pointer;
+}
+
+.boton--secundario {
+  background-color: var(--gris);
+  color: var(--blanco)
+}
+
+.cursos {
+  list-style: none;
+}
+
+.widget-curso {
+  border-bottom: 2px solid var(--claro);
+  margin-bottom: 2rem;
+}
+
+.widget-curso:last-of-type {
+  border: none;
+  margin-bottom: 0;
+}
+
+.widget-curso__label {
+  font-family: var(--fuenteHeading);
+  font-weight: bold;
+}
+
+.widget-curso__info {
+  font-weight: 400;
+}
+
+.widget-curso__label,
+.widget-curso__info {
+  font-size: 2rem;
+}
+
+/* Footer */
+
+.footer {
+  background-color: var(--claro);
+  padding-bottom: 3rem;
+  margin-top: 4rem;
+}
+
+/* Nosotros */
+
+@media (min-width: 768px) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+}
+
+/* Cursos */
+
+.curso {
+  border-bottom: .3rem solid var(--marron);
+  padding: 3rem 0;
+}
+
+@media (min-width: 768px) {
+    .curso {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      column-gap: 2rem;
+    }
+}
+
+.curso:last-of-type {
+  border-bottom: none;
+}
+
+.curso__label {
+  font-family: var(--fuenteHeading);
+  font-weight: bold;
+}
+
+.curso__info {
+  font-weight: 400;
+}
+
+.curso__label,
+.curso__info {
+  font-size: 2rem;
+}
+
+
+/* Contacto */
+
+.contacto-bg {
+  background-image: url(../img/contacto.jpg);
+  height: 40rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.formulario {
+  
+}
+
+.campo {
+
+}
+
+.campo__label {
+
+}
+
+.campo__field {
+
 }
