--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,15 @@ img {
 
 /* Header */
 
-.header {
+.webp .header { 
+  background-image: url(../img/banner.webp);
+}
+
+.no-webp .header { 
   background-image: url(../img/banner.jpg);
+}
+
+.header { 
   height: 60rem;
   background-size: cover;
   background-repeat: no-repeat;
@@ -175,6 +182,7 @@ img {
   text-transform: uppercase;
   font-weight: bold;
   margin-bottom: 2rem;
+  border: none;
 }
 
 @media (min-width: 768px) {
@@ -183,9 +191,14 @@ img {
     }
 }
 
-.boton--primario {
-  background-color: var(--marron); 
+.boton:hover { 
   cursor: pointer;
+  background-color: var(--claro);
+  color: var(--marron);
+}
+
+.boton--primario {
+  background-color: var(--marron);  
 }
 
 .boton--secundario {
@@ -283,17 +296,31 @@ img {
 }
 
 .formulario {
-  
+  background-color: var(--blanco);
+  margin: -5rem auto 0 auto;
+  width: 95%;
+  padding: 5rem;
 }
 
 .campo {
-
+  display: flex;
+  margin-bottom: 2rem;
+  color: var(--negro);
+  font-size: 1.7rem;
+  font-weight: bold;
 }
 
 .campo__label {
-
+  flex: 0 0 9rem;
+  text-align: right;
+  padding-right: 2rem;
 }
 
 .campo__field {
+  flex: 1;
+  border: 1px solid var(--grisClaro);
+}
 
+.campo__field--textarea { 
+  height: 20rem;
 }
